# ai-math-tutor

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: database.py  knowledge_graph_service.py  learning_path_service.py  llm_service.py  main.py  models.py  ocr_service.py  paper_service.py  practice_service.py  rag_service.py  report_service.py  schemas.py  student_service.py  suggestion_service.py
backend/app/data/: math_knowledge.json
backend/qdrant_data/: meta.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: math.ts
frontend/src/components/: HistoryPanel.vue  MathDiagram.vue  PaperPanel.vue  SolvePanel.vue  StudentBar.vue  TabNav.vue  WrongPanel.vue
frontend/src/utils/: browserOcr.ts  mathDiagram.ts
